# RubyCubed

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
examples/: fact.S  fact.rb
playground/: arithm.S  arithm.rb  fact.S  fact.rb  fact2.rb  hello-var.S  hello-var.rb  hello-world.S
src/: main.cpp
src/backend/: worker.cpp  worker.h
src/lexer/: token.h  tokenizer.cpp  tokenizer.h
src/parser/: ast.h  expression.cpp  expression.h  fwd.h  parser.cpp  parser.h
tests/: backend.test.cpp  lexer.test.cpp  parser.test.cpp
